Archive2/e7/ab83471c1d33b4/output
+ g++-4.9 -std=c++11 -Wall -Wextra -Wconversion -Wnarrowing -Wundef -pedantic-errors -O3 -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:4:1: error: 'A::~A()' is private
 ~A() = default;
 ^
main.cpp:9:3: error: within this context
 A a;
   ^
main.cpp:9:3: warning: unused variable 'a' [-Wunused-variable]
